# risk_manager_platform

./: .gitignore  CODEX_AUDIT_ACTIVE13_SCREENING_V1.md  CODEX_HANDOFF_DYNAMIC_RESEARCH_PLATFORM.md  README.md  pyproject.toml  render.yaml  requirements.txt
dashboard/: app.js  components.js  index.html  research_universe.js  styles.css
docs/: CURSOR_COMPLETION_REPORT.md  CURSOR_MASTER_HANDOFF.md  GPT_COLLABORATION_HANDOFF.md  MONDAY_DEMO.md  NEXT_ACTIONS.md  PLATFORM_REMEDIATION_V1_HANDOFF.md  PLATFORM_REMEDIATION_V1_LIMITATIONS.md  PROJECT_STATE.md  REQUIREMENTS_TRACEABILITY.md  WEEKEND_LEARNING_GUIDE.md  boss_literature_intake_2026_06_05.md  build_sequence_2026_06_05.md  dashboard_data_contract_audit.md  institutional_decision_workflow.md  platform_workflow_reset.md  risk_manager_workstation_contract.md  strategy_intake_workflow.md  strategy_return_risk_packet.md  strategy_scaling_model.md  workstation_ui_reference_contract.md
output/: risk_recommendation_snapshot.json
scripts/: audit_dashboard_data_contract.py  build_strategy_selection_expansion_bundle.py  build_us_equity_dashboard_bundle.py  build_worldquant_alpha2_universe.py  compact_dashboard_artifact.py  download_worldquant_alpha2_pilot_prices.py  export_strategy_decision_tables.py  fetch_yfinance_market_data.py  generate_dashboard_artifact.py  refresh_platform.py  run_diverse_strategy_research.py  run_event_panel_research.py  run_expanded_selection_research.py  run_final_challenge_research.py  run_final_delivery_research.py  run_final_diversified_research.py  run_final_strategy_research.py  (+18 more)
(+391 files in other folders)
