[project]
name = "risk-manager-platform"
version = "0.1.0"
description = "Multi-strategy portfolio risk management workstation skeleton."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "yfinance>=0.2",
  "PyYAML>=6.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
